; ModuleID = '/home/carl/AnghaBench/linux/drivers/misc/extr_hpilo.c_ilo_disable_interrupts.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/misc/extr_hpilo.c_ilo_disable_interrupts.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ilo_hwinfo = type { i32* }

@DB_IRQ = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.ilo_hwinfo*)* @ilo_disable_interrupts to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ilo_disable_interrupts(%struct.ilo_hwinfo* %0) #0 {
  %2 = alloca %struct.ilo_hwinfo*, align 8
  store %struct.ilo_hwinfo* %0, %struct.ilo_hwinfo** %2, align 8
  %3 = load %struct.ilo_hwinfo*, %struct.ilo_hwinfo** %2, align 8
  %4 = getelementptr inbounds %struct.ilo_hwinfo, %struct.ilo_hwinfo* %3, i32 0, i32 0
  %5 = load i32*, i32** %4, align 8
  %6 = load i64, i64* @DB_IRQ, align 8
  %7 = getelementptr inbounds i32, i32* %5, i64 %6
  %8 = call i32 @ioread8(i32* %7)
  %9 = and i32 %8, -2
  %10 = load %struct.ilo_hwinfo*, %struct.ilo_hwinfo** %2, align 8
  %11 = getelementptr inbounds %struct.ilo_hwinfo, %struct.ilo_hwinfo* %10, i32 0, i32 0
  %12 = load i32*, i32** %11, align 8
  %13 = load i64, i64* @DB_IRQ, align 8
  %14 = getelementptr inbounds i32, i32* %12, i64 %13
  %15 = call i32 @iowrite8(i32 %9, i32* %14)
  ret void
}

declare dso_local i32 @iowrite8(i32, i32*) #1

declare dso_local i32 @ioread8(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
